--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Kolab-LDAP-Backend-ad
-version:      0.9
-version_from: ad.pm
+version:      1.01
+version_from: lib/Kolab/LDAP/Backend/ad.pm
 installdirs:  site
 requires:
 
